--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="../pages/faq.html">FAQ</a></li>
-                        <li class="nav-item"><a class="nav-link" href="../pages/about_us.html">About us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="../pages/contact_us.html">Contact us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/faq.html">FAQ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/about_us.html">About us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/contact_us.html">Contact us</a></li>
                     </ul>
                 </div>
             </div>    
