--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -91,7 +91,7 @@
             <div class="footer-section">
                 <div class="contact-section">
                     <h5>Contact us</h5>
-                    <a href="https:/www.instagram.com" target="_blank"> Instagram </a>
+                    <a href="https://www.instagram.com/ikigai_marine/" target="_blank"> Instagram </a>
                     <a href="../pages/contact_us.html"> Send us a message</a>
                 </div>
             </div>
