--- a/pages/faq.html
+++ b/pages/faq.html
@@ -109,12 +109,12 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-                                aria-controls="panelsStayOpen-collapseThree">
+                                data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseFour">
                                 How long does it take to make one?
                             </button>
                         </h2>
-                        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                        <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
                             <div class="accordion-body">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo fugit aut numquam.
                                     Sequi
@@ -127,12 +127,12 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-                                aria-controls="panelsStayOpen-collapseThree">
+                                data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseFive">
                                 Are you selling overseas?
                             </button>
                         </h2>
-                        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                        <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse">
                             <div class="accordion-body">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo fugit aut numquam.
                                     Sequi
@@ -153,7 +153,7 @@
             <div class="footer-section">
                 <div class="contact-section">
                     <h5>Contact us</h5>
-                    <a href="https:/www.instagram.com" target="_blank"> Instagram </a>
+                    <a href="https://www.instagram.com/ikigai_marine/" target="_blank"> Instagram </a>
                     <a href="../pages/contact_us.html"> Send us a message</a>
                 </div>
             </div>
