--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
                         <img src="img/solid-color-imagegrande.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p>"I have tried spear fishing with a pole so many times and it was extremely difficult.
-                                This pole
-                                makes everything easier!"</p>
+                                This pole makes everything easier!"</p>
                             <h3>Tabi</h3>
                             <h5>Cairns - QLD</h5>
                         </div>
@@ -142,7 +141,7 @@
             <div class="footer-section">
                 <div class="contact-section">
                     <h5>Contact us</h5>
-                    <a href="https:/www.instagram.com" target="_blank"> Instagram </a>
+                    <a href="https://www.instagram.com/ikigai_marine" target="_blank"> Instagram </a>
                     <a href="./pages/contact_us.html"> Send us a message</a>
                 </div>
             </div>
