--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -21,7 +21,7 @@
             <div class="container-fluid">
                 <a href="../index.html">
                     <img src="../img/logo_pequeno.jpg" alt="logo"></a>
-                <a class="navbar-brand" href="#">IKIGAI MARINE</a>
+                <a class="navbar-brand" href="../index.html">IKIGAI MARINE</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -101,7 +101,7 @@
             <div class="footer-section">
                 <div class="contact-section">
                     <h5>Contact us</h5>
-                    <a href="https:/www.instagram.com" target="_blank"> Instagram </a>
+                    <a href="https://www.instagram.com/ikigai_marine" target="_blank"> Instagram </a>
                     <a href="../pages/contact_us.html"> Send us a message</a>
                 </div>
             </div>
