--- a/pages/faq.html
+++ b/pages/faq.html
@@ -9,7 +9,8 @@
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 
     <!-- css -->
-    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <title>FAQ</title>
@@ -33,16 +34,16 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="../pages/faq.html">FAQ</a></li>
                         <li class="nav-item"><a class="nav-link" href="../pages/about_us.html">About us</a></li>
                         <li class="nav-item"><a class="nav-link" href="../pages/contact_us.html">Contact us</a></li>
                     </ul>
                 </div>
-            </div>    
+            </div>
         </nav>
     </header>
-    
+
     <main>
         <section class="top_pict3"><!--extra image with motto-->
             <p>Perfecting the hunt</p>
@@ -59,14 +60,22 @@
                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                                 aria-controls="panelsStayOpen-collapseOne">
-                                How does a pole spear work?
+                                What is the difference between a conventional pole spear and a Roller polespear?
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
                             <div class="accordion-body">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo fugit aut numquam.
-                                    Sequi reiciendis quas, cumque dolore, dolorum exercitationem hic assumenda, veniam
-                                    expedita maxime ex estratione aspernatur harum sapiente! </p>
+                                <p>A Roller polespear utilises the full potential of stored energy in its power band, meaning it delivers power/ thrust for the entire stroke up until the pole leaves the
+                                    hunters hand. Whilst a conventional pole spear relies on momentum and thus has no driving Power
+                                    once the band has returned to its relaxed state. This is usually around 30% of its overall stretch. Inshort the roller pole can be said to be 30percent more powerful for a given power
+                                    band.                                 
+                                    Side note; a conventional pole spear requires the user to induce a half twist in the
+                                    band when loading, to reduce the band just loading up one side of the pole and
+                                    creating a bend.
+                                    Whilst because of the nature of a Roller polespear, the forces are equal either side
+                                    of the pole so the spear stays straight without any input from the Hunter.
+                                    Roller polespears just make sense and once you have used one you too will understand
+                                    the simplicity and effectiveness of them.</p>
                             </div>
                         </div>
                     </div>
@@ -75,16 +84,12 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                                 aria-controls="panelsStayOpen-collapseTwo">
-                                What kind of fish can you catch with a pole spear?
+                                How far can a 9ft BOONDI roller pole spear shoot?
                             </button>
                         </h2>
                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
                             <div class="accordion-body">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo fugit aut numquam.
-                                    Sequi
-                                    reiciendis quas, cumque dolore, dolorum exercitationem hic assumenda, veniam
-                                    expedita
-                                    maxime ex estratione aspernatur harum sapiente! </p>
+                                <p>During controlled testing- having accuracy and penetrating power at the forefront. The BOONDI roller consistently would hit a palm sized target from 9 ft (2.75m) away (measuring from spear tip to target) this included adequate penetration for average sized fish. Utilising highest grade carbon allows us to make use of this incredible material in both strength and stiffness. Contrary to popular belief, a ridge spear will hold and store energy for longer, resulting in better accuracy and penetration compared to other highly flexible polespears in the market. </p>
                             </div>
                         </div>
                     </div>
@@ -147,27 +152,27 @@
         </section>
 
 
-    <footer> <!--footer, groups- can add more in the future-->
-        <div class="footer-container">
-            <img src="../img/logo_pequeno.jpg" alt="">
-            <div class="footer-section">
-                <div class="contact-section">
-                    <h5>Contact us</h5>
-                    <a href="https://www.instagram.com/ikigai_marine" target="_blank"> Instagram </a>
-                    <a href="../pages/contact_us.html"> Send us a message</a>
+        <footer> <!--footer, groups- can add more in the future-->
+            <div class="footer-container">
+                <img src="../img/logo_pequeno.jpg" alt="">
+                <div class="footer-section">
+                    <div class="contact-section">
+                        <h5>Contact us</h5>
+                        <a href="https://www.instagram.com/ikigai_marine" target="_blank"> Instagram </a>
+                        <a href="../pages/contact_us.html"> Send us a message</a>
+                    </div>
+                </div>
+                <div class="footer-section">
+                    <h5>Track order</h5> <!--link to order - not ready yet-->
+                </div>
+                <div class="footer-section">
+                    <h5><a href="../pages/about_us.html">About us</a></h5>
                 </div>
             </div>
-            <div class="footer-section">
-                <h5>Track order</h5> <!--link to order - not ready yet-->
-            </div>
-            <div class="footer-section">
-                <h5><a href="../pages/about_us.html">About us</a></h5>
-            </div>
-        </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
