--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -6,7 +6,8 @@
     <!-- java -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Contact us</title>
 
@@ -27,7 +28,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="../pages/faq.html">FAQ</a></li>
                         <li class="nav-item"><a class="nav-link" href="../pages/about_us.html">About us</a></li>
                         <li class="nav-item"><a class="nav-link" href="../pages/contact_us.html">Contact us</a></li>
@@ -78,7 +79,7 @@
             
         </section>
 
-        <section><!--return home-->
+        <!--<section> return home-->
                 <!-- <div class="returnhome">
                     <h3><a href="../index.html" class="button3">Go home</a></h3>
                 </div>
