--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
                 </div>
             </div>
         </section>
-        <section> <!---reviews------------------------->
+        <section>
+            
+        </section>
+        <section> 
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -79,9 +82,8 @@
                     <div class="carousel-item active">
                         <img src="img/solid-color-imagegrande.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <p>“I've been using this pole spear for a few months now, mainly for reef fishing and
-                                shallow dives,
-                                and it's proven to be a reliable tool in my kit.”</p>
+                            <h2>“I've been using this pole spear for a few months now, mainly for reef fishing and
+                            shallow dives, and it's proven to be a reliable tool in my kit.”</h2>
                             <h3>Travis</h3>
                             <h5>Cairns - QLD</h5>
                         </div>
@@ -89,7 +91,7 @@
                     <div class="carousel-item">
                         <img src="img/solid-color-imagegrande.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <p>"Great pole! Thanks guys for creating such a great product!"</p>
+                            <h2>"Great pole! Thanks guys for creating such a great product!"</h2>
                             <h3>Jono</h3>
                             <h5>Cairns - QLD</h5>
                         </div>
@@ -97,8 +99,8 @@
                     <div class="carousel-item">
                         <img src="img/solid-color-imagegrande.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <p>"I have tried spear fishing with a pole so many times and it was extremely difficult.
-                                This pole makes everything easier!"</p>
+                            <h2>"I have tried spear fishing with a pole so many times and it was extremely difficult.
+                                This pole makes everything easier!"</h2>
                             <h3>Tabi</h3>
                             <h5>Cairns - QLD</h5>
                         </div>
@@ -106,8 +108,8 @@
                     <div class="carousel-item">
                         <img src="img/solid-color-imagegrande.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <p>"I started free diving long time ago but then my friends talked to me about spear
-                                fishing. I wasn´t sure about it until I discovered this pole. Thanks legends."</p>
+                            <h2>"I started free diving long time ago but then my friends talked to me about spear
+                                fishing. I wasn´t sure about it until I discovered this pole. Thanks legends."</h2>
                             <h3>Mat</h3>
                             <h5>Cairns - QLD</h5>
                         </div>
