--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
                 <img src="./img/logo_pequeno.jpg" alt="logo">
-                <a class="navbar-brand" href="#">IKIGAI MARINE</a>
+                <h1 class="navbar-brand" href="#">IKIGAI MARINE</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
                         <li class="nav-item"><a class="nav-link" href="pages/contact_us.html">Contact us</a></li>
                     </ul>
                 </div>
-            </div>    
+            </div>
         </nav>
     </header>
     <main>
@@ -64,9 +64,9 @@
             </div>
         </section>
         <section>
-            
+
         </section>
-        <section> 
+        <section>
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -83,7 +83,7 @@
                         <img src="img/solid-color-imagegrande.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h2>“I've been using this pole spear for a few months now, mainly for reef fishing and
-                            shallow dives, and it's proven to be a reliable tool in my kit.”</h2>
+                                shallow dives, and it's proven to be a reliable tool in my kit.”</h2>
                             <h3>Travis</h3>
                             <h5>Cairns - QLD</h5>
                         </div>
@@ -140,19 +140,24 @@
 
     <footer> <!--footer, groups- can add more in the future-->
         <div class="footer-container">
-            <img src="./img/logo_pequeno.jpg" alt="">
             <div class="footer-section">
-                <div class="contact-section">
-                    <h5>Contact us</h5>
-                    <a href="https://www.instagram.com/ikigai_marine" target="_blank"> Instagram </a>
-                    <a href="./pages/contact_us.html"> Send us a message</a>
-                </div>
+                <h3>Contact Us</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/ikigai_marine" target="_blank">Instagram</a></li>
+                    <li><a href="./pages/contact_us.html">Send us a message</a></li>
+                </ul>
             </div>
             <div class="footer-section">
-                <h5>Track order</h5> <!--link to order - not ready yet-->
+                <h3>Track Order</h3>
+                <ul>
+                    <li><a href="#">Order Status</a></li> <!---link no disponible aun-->
+                </ul>
             </div>
             <div class="footer-section">
-                <h5><a href="./pages/about_us.html">About us</a></h5>
+                <h3>About Us</h3>
+                <ul>
+                    <li><a href="./pages/about_us.html">Our Story</a></li>
+                </ul>
             </div>
         </div>
     </footer>
