--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,8 +15,10 @@
     <!--fonts---->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header> <!--nav bar with logo-->
         <nav class="navbar navbar-expand-lg ">
@@ -34,7 +37,7 @@
                         <li class="nav-item"><a class="nav-link" href="../pages/contact_us.html">Contact us</a></li>
                     </ul>
                 </div>
-            </div>    
+            </div>
         </nav>
     </header>
     <main>
@@ -45,72 +48,88 @@
         <section class="owners"> <!--introducing berto and andy-->
             <div class="paragraphikigai">
                 <h2>We are Ikigai Marine</h2>
-                <p>. . .A group of friends motivated by the land and sea. We pride ourselves on quality, respect and sustainability. Our aim is to share our passion of building superior underwater hunting equipment and systems, tested in the waters adjacent to where they are  hand crafted right here in Far North Queensland Australia.
-                . . . </p>
+                <p>. . .A group of friends motivated by the land and sea. We pride ourselves on quality, respect and
+                    sustainability. Our aim is to share our passion of building superior underwater hunting equipment
+                    and systems, tested in the waters adjacent to where they are hand crafted right here in Far North
+                    Queensland Australia.
+                    . . . </p>
             </div>
             <div class="container-intro">
                 <div class="robandy1">
-                    <img class="robandy" src="../img/berto.jpg" alt="">
+                    <img class="robandy" src="../img/berto_aboutus.jpg" alt="">
                     <h2>Rob (Aka Enzo)</h2>
                     <p>Deep freediver, spearo and tug boat skipper to sustain his diving obsession.</p>
                 </div>
                 <div class="robandy1">
-                    <img class="robandy" src="../img/andy.jpg" alt="">
+                    <img class="robandy" src="../img/andy_aboutus.jpg" alt="">
                     <h2>Andrew</h2>
-                    <p>Tropical fruit farmer, diesel mechanic rarely sleeps, eats fish eyeballs for breakfast, a true testimony to the saying 'built not bought</p>
+                    <p>Tropical fruit farmer, diesel mechanic rarely sleeps, eats fish eyeballs for breakfast, a true
+                        testimony to the saying 'built not bought</p>
                 </div>
             </div>
         </section>
-
+        
         <section class="grid-pictures">
-                <div class="grid-item img-1">
-                    <img src="../img/grid1.jpg" alt="">
-                </div>
-                <div class="grid-item">
-                    <img src="../img/grid2.jpg" alt="">
-                </div>
-                <div class="grid-item">
-                    <img src="../img/grid3.jpg" alt="">
-                </div>
-                <div class="grid-item img-4">
-                    <img src="../img/grid4.jpg" alt="">
-                </div>
-                <div class="grid-item">
-                    <img src="../img/grid5.jpg" alt="">
-                </div>
-                <div class="grid-item">
-                    <img src="../img/grid6.jpg" alt="">
-                </div>
-                <div class="grid-item">
-                    <img src="../img/grid7.jpg" alt="">
-                </div>
-                <div class="grid-item">
-                    <img src="../img/grid8.jpg" alt="">
-                </div>
+            <div class="grid-item img-1">
+                <img src="../img/grid1.jpg" alt="">
+            </div>
+            <div class="grid-item">
+                <img src="../img/grid2.jpg" alt="">
+            </div>
+            <div class="grid-item">
+                <img src="../img/grid3.jpg" alt="">
+            </div>
+            <div class="grid-item img-4">
+                <img src="../img/grid4.jpg" alt="">
+            </div>
+            <div class="grid-item">
+                <img src="../img/grid5.jpg" alt="">
+            </div>
+            <div class="grid-item">
+                <img src="../img/grid6.jpg" alt="">
+            </div>
+            <div class="grid-item">
+                <img src="../img/grid7.jpg" alt="">
+            </div>
+            <div class="grid-item">
+                <img src="../img/grid8.jpg" alt="">
+            </div>
+            <div class="grid-item">
+                <img src="../img/group1.jpg" alt="">
+            </div>
+            <div class="grid-item">
+                <img src="../img/grid10.jpg" alt="">
+            </div>
         </section>
 
         <!--<section> return home-->
-            <!-- <div class="returnhome">
+        <!-- <div class="returnhome">
                 <h3><a href="../index.html" class="button3">Go home</a></h3>
             </div>
         </section> -->
     </main>
 
-    <footer> <!--footer, groups- can add more in the future-->
+    
+        <footer> <!--footer, groups- can add more in the future-->
         <div class="footer-container">
-            <img src="../img/logo_pequeno.jpg" alt="">
             <div class="footer-section">
-                <div class="contact-section">
-                    <h5>Contact us</h5>
-                    <a href="https://www.instagram.com/ikigai_marine" target="_blank"> Instagram </a>
-                    <a href="../pages/contact_us.html"> Send us a message</a>
-                </div>
+                <h3>Contact Us</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/ikigai_marine" target="_blank">Instagram</a></li>
+                    <li><a href="../pages/contact_us.html">Send us a message</a></li>
+                </ul>
             </div>
             <div class="footer-section">
-                <h5>Track order</h5> <!--link to order - not ready yet-->
+                <h3>Track Order</h3>
+                <ul>
+                    <li><a href="#">Order Status</a></li> <!---link no disponible aun-->
+                </ul>
             </div>
             <div class="footer-section">
-                <h5><a href="../pages/about_us.html">About us</a></h5>
+                <h3>About Us</h3>
+                <ul>
+                    <li><a href="../pages/about_us.html">Our Story</a></li>
+                </ul>
             </div>
         </div>
     </footer>
@@ -118,4 +137,5 @@
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
