--- a/pages/details.html
+++ b/pages/details.html
@@ -93,21 +93,27 @@
         </section> -->
     </main>
 
-    <footer> <!--footer, groups- can add more in the future-->
+    
+        <footer> <!--footer, groups- can add more in the future-->
         <div class="footer-container">
-            <img src="../img/logo_pequeno.jpg" alt="">
             <div class="footer-section">
-                <div class="contact-section">
-                    <h5>Contact us</h5>
-                    <a href="https://www.instagram.com/ikigai_marine" target="_blank"> Instagram </a>
-                    <a href="../pages/contact_us.html"> Send us a message</a>
-                </div>
+                <h3>Contact Us</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/ikigai_marine" target="_blank">Instagram</a></li>
+                    <li><a href="../pages/contact_us.html">Send us a message</a></li>
+                </ul>
             </div>
             <div class="footer-section">
-                <h5>Track order</h5> <!--link to order - not ready yet-->
+                <h3>Track Order</h3>
+                <ul>
+                    <li><a href="#">Order Status</a></li> <!---link no disponible aun-->
+                </ul>
             </div>
             <div class="footer-section">
-                <h5><a href="../pages/about_us.html">About us</a></h5>
+                <h3>About Us</h3>
+                <ul>
+                    <li><a href="../pages/about_us.html">Our Story</a></li>
+                </ul>
             </div>
         </div>
     </footer>
