--- a/pages/faq.html
+++ b/pages/faq.html
@@ -63,7 +63,7 @@
                                 What is the difference between a conventional pole spear and a Roller polespear?
                             </button>
                         </h2>
-                        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse">
                             <div class="accordion-body">
                                 <p>A Roller polespear utilises the full potential of stored energy in its power band, meaning it delivers power/ thrust for the entire stroke up until the pole leaves the
                                     hunters hand. Whilst a conventional pole spear relies on momentum and thus has no driving Power
@@ -153,23 +153,28 @@
 
 
         <footer> <!--footer, groups- can add more in the future-->
-            <div class="footer-container">
-                <img src="../img/logo_pequeno.jpg" alt="">
-                <div class="footer-section">
-                    <div class="contact-section">
-                        <h5>Contact us</h5>
-                        <a href="https://www.instagram.com/ikigai_marine" target="_blank"> Instagram </a>
-                        <a href="../pages/contact_us.html"> Send us a message</a>
-                    </div>
-                </div>
-                <div class="footer-section">
-                    <h5>Track order</h5> <!--link to order - not ready yet-->
-                </div>
-                <div class="footer-section">
-                    <h5><a href="../pages/about_us.html">About us</a></h5>
-                </div>
+        <div class="footer-container">
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <ul>
+                    <li><a href="https://www.instagram.com/ikigai_marine" target="_blank">Instagram</a></li>
+                    <li><a href="../pages/contact_us.html">Send us a message</a></li>
+                </ul>
             </div>
-        </footer>
+            <div class="footer-section">
+                <h3>Track Order</h3>
+                <ul>
+                    <li><a href="#">Order Status</a></li> <!---link no disponible aun-->
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>About Us</h3>
+                <ul>
+                    <li><a href="../pages/about_us.html">Our Story</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
             crossorigin="anonymous"></script>
