--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head> <!--cabeza-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ikigai Marine was created by ocean lovers for ocean lovers. Born from a passion for spearfishing and freediving, each spear is built with heart, precision, and the spirit of the sea to perfect your hunt.">
+    <meta name="keywords" content="Ikigai, marine, spearfishers, spearfishing, polespear, hunting, ocean, rubber, adventure, passion, fish, fishing, spear, freediving, diving, shooting, speargun, precision">
     <!-- java -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -52,7 +54,7 @@
 
         <section> <!-- about the product_ cta buy and details-->
             <div class="product">
-                <img src="./img/pole_spear.jpg">
+                <img src="./img/world-record_square.jpg" alt="Rob showing his record with this pole spear">
                 <div>
                     <p> Lightweight and durable, this high-quality pole spear is perfect for beginner to experienced
                         spearfishers. Easy to use, with strong grip and precision tip for accurate, silent underwater
@@ -92,6 +94,8 @@
                         <img src="img/solid-color-imagegrande.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h2>"Great pole! Thanks guys for creating such a great product!"</h2>
+                            <p>    </p>
+                            <p>    </p>
                             <h3>Jono</h3>
                             <h5>Cairns - QLD</h5>
                         </div>
@@ -131,9 +135,9 @@
         <section> <!-- sponsors or collabs-->
             <p class="collabs-title">Collaborating with...</p>
             <div class="collabs">
-                <img src="./img/wilkinson.png" alt="">
-                <img src="./img/freedive_nobackg.png" alt="">
-                <img src="./img/rainfoo.jpg" alt="">
+                <img src="./img/wilkinson.png" alt="collab with wilkinson">
+                <img src="./img/freedive_nobackg.png" alt="collab with FreediveFNQ">
+                <img src="./img/rainfoo.jpg" alt="collab with Rainforest rescue">
             </div>
         </section>
     </main>
