--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Ikigai, marine, Contact, message, email, spearfishing, polespear, hunting, ocean, rubber, adventure, passion, fish, fishing, spear, freediving, diving, shooting, speargun, precision">
     <!-- java -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -22,7 +23,7 @@
             <div class="container-fluid">
                 <a href="../index.html">
                     <img src="../img/logo_pequeno.jpg" alt="logo"></a>
-                <a class="navbar-brand" href="../index.html">IKIGAI MARINE</a>
+                <h1 class="navbar-brand" href="#">IKIGAI MARINE</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
