--- a/pages/details.html
+++ b/pages/details.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="get to know how we created this pole spear. It was not only with passion but also with a lot or research. We want to give our customers a great experience to enhance and perfect their skills.">
+    <meta name="keywords" content="Ikigai, marine, details, rubber, parts, carbonfibre, stainless, BOONDI, spearfishing, polespear, hunting, ocean, rubber, adventure, passion, fish, fishing, spear, freediving, diving, shooting, speargun, precision">
     <!-- java -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -25,7 +27,7 @@
             <div class="container-fluid">
                 <a href="../index.html">
                     <img src="../img/logo_pequeno.jpg" alt="logo"></a>
-                <a class="navbar-brand" href="../index.html">IKIGAI MARINE</a>
+                <h1 class="navbar-brand" href="#">IKIGAI MARINE</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -50,14 +52,14 @@
             <h2 class="title-details">Details of the product</h2>
             <div class="list-of-details">
                 <div>
-                    <img class="details-pole" src="../img/part1.jpg" alt=""></img>
+                    <img class="details-pole" src="../img/part2.png" alt=""></img>
                     <p> <strong>3 Piece versatility</strong> Our BOONDI Roller polespear 9 ft - is comprised of 3
                         modular carbon fibre sections. Each section is approximately 91cm (3ft) long- meaning that
                         wherever your standard long blade fins go, you can take your polespear with you! All 3 sections
                         including injector rod, slip tip, rubber and rigging weigh an impressive 1.2kg!</p>
                 </div>
                 <div>
-                    <img class="details-pole" src="../img/part2.png" alt=""> </img>
+                    <img class="details-pole" src="../img/carbonfibre.jpg" alt=""> </img>
                     <p> <strong>Highest quality raw materials</strong> As Castrol states “oils ain’t Oils” the same goes
                         for Carbon fibre… Strenuous workshop and infield testing has proven its worth when it comes to
                         our carbon fibre sections- You can rest assure All BOONDI rollers are constructed from Japanese
@@ -66,7 +68,7 @@
                         resistance- Making each section absolutely Marinised and up for any punishment. </p>
                 </div>
                 <div>
-                    <img class="details-pole" src="../img/part3.png" alt=""></img>
+                    <img class="details-pole" src="../img/sliptip.jpg" alt=""></img>
                     <p><strong>Unrivalled Slip tip design</strong> Our Custom Patent Pending ‘Grip Tip’ features the following:
                         - a razor sharp tri cut point, meaning it cuts through flesh and bone on penetration unlike a
                         conventional pencil point.
@@ -79,7 +81,7 @@
                     </p>
                 </div>
                 <div>
-                    <img class="details-pole" src="../img/part3.png" alt=""></img>
+                    <img class="details-pole" src="../img/primelinerubber.jpg" alt=""></img>
                     <p><strong>Rigged to perform</strong> - Powered by world leaders in rubber tech, USA made primeline rubber propels our mighty BOONDI roller polespear. All additional rigging is highest quality European cordage all splicing and crimping is all done inhouse by us. 
                     </p>
                 </div>
