--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -49,7 +49,7 @@
         <section> <!--Complete and send us a message-->
             
             <div class="formulario">
-                <form class="form" action="submit">
+                <form class="form" action="submit" netlify>
                     <h2>Contact us</h2>
                     <label for="name">Given name</label>
                     <input type="text" name="name" id="name">
